# Ludwig

./: CMakeLists.txt  GPATH  GRTAGS  GTAGS  LICENSE  README.md
glfw/: Makefile  cmake_install.cmake
glfw/src/: Makefile  cmake_install.cmake  glfw3.pc
src/: common.hpp  config.hpp  config.xml  ludwig.cpp  ludwig.hpp  main.cpp  program.hpp
src/clear/: main.comp
src/copy/: main.comp  main.comp~
src/dotprod/: main.comp
src/initial/: main.comp  main.comp~
src/main/: fragment.frag  vertex.vert
src/matvec/: main.comp
src/multAdd/: main.comp  main.comp~
src/mvprod/: main.comp
src/ratio/: main.comp  main.comp~
